Syndicati - Platform Upgrade
Changelog:
- UI Enhancements & FaceRecognition Functionality Refinements

-Upgrade to JDK25 w/ JBR 25.0.2 & JavaFX25